--- a/class/01-html/02-signup.html
+++ b/class/01-html/02-signup.html
@@ -1,29 +1,35 @@
-```
 <!-- class/01-html/02-signup.html -->
 <!DOCTYPE html>
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="02-signup.css" />
     <title>회원가입</title>
   </head>
   <body>
-    <h1>회원가입</h1>
-    <input type="text" placeholder="이메일을 입력해주세요" /><br /><br />
-    <input type="text" placeholder="이름을 입력해주세요" /><br /><br />
-    <input type="password" placeholder="비밀번호를 입력해주세요" /><br /><br />
-    <input type="password" placeholder="비밀번호를 확인해주세요" /><br /><br />
-    <br /><br />
-    <select>
-      <option disabled="true" selected="true">지역을 선택하세요</option>
-      <option>서울</option>
-      <option>경기</option>
-      <option>인천</option>
-    </select>
-    <br /><br />
-    <input type="radio" name="gender" /> 여성 <input type="radio" name="gender" /> 남성 <br /><br />
-    <input type="checkbox" /> 이용약관 어쩌구에 동의합니다.
-    <hr />
-    <button>가입하기</button>
+    <div class="formlayout">
+      <div class="formlayoutin">
+        <h1>회원가입을 위해 <br />정보를 입력해주세요</h1>
+        <div class="forminput">
+          <span>*이메일</span> <input type="text" /> <span>*이름</span><input type="text" />
+          <span>*비밀번호</span><input type="password" /> <span>*비밀번호 확인</span
+          ><input type="password" />
+        </div>
+        <!-- <select>
+          <option disabled="true" selected="true">지역을 선택하세요</option>
+          <option>서울</option>
+          <option>경기</option>
+          <option>인천</option>
+        </select> -->
+        <div class="gender">
+          <input type="radio" name="gender" /> 여성 <input type="radio" name="gender" /> 남성
+        </div>
+        <br /><br />
+        <input class="input2yong" type="checkbox" /> 이용약관 어쩌구에 동의합니다.
+        <hr />
+        <button class="registerform">가입하기</button>
+      </div>
+    </div>
     <!-- 원래는 이렇게 사용했습니다. -->
     <!--  <input type="button" value="가입하기"> -->
   </body>
