--- a/cyworld/index.html
+++ b/cyworld/index.html
@@ -24,14 +24,33 @@
                 <div class="left__body__header__line"></div>
               </div>
               <div class="left__body__profile">
-                <i class="fa-regular fa-face-smile"></i>
-                <i class="fa-solid fa-phone"></i>
-                <i class="fa-regular fa-envelope"></i>
-                <i class="fa-solid fa-star"></i>
+                <div class="profile__detail">
+                  <i class="fas fa-regular fa-face-smile"></i>
+                  이름
+                </div>
+                <div class="profile__detail">
+                  <i class="fas fa-solid fa-phone"></i>
+                  phone
+                </div>
+                <div class="profile__detail">
+                  <i class="fas fa-regular fa-envelope"></i>
+                  E-mail
+                </div>
+                <div class="profile__detail">
+                  <i class="fas fa-solid fa-star"></i>
+                  인스타그램
+                </div>
               </div>
               <div class="left__body__footer">
-                👍
-                <!-- ctrl+. 하면 이모지 사용가능 -->
+                <div class="wrapper__feel">
+                  <div class="feel__title">오늘의 기분</div>
+                  <select class="feel__select">
+                    <option>기쁨 😊</option>
+                    <option>슬픔 😢</option>
+                    <option>사랑 😍</option>
+                  </select>
+                </div>
+                <!-- window +. 하면 이모지 사용가능 -->
               </div>
             </div>
           </div>
