--- a/cyworld/home.html
+++ b/cyworld/home.html
@@ -2,19 +2,25 @@
 <html lang="ko">
   <head>
     <title>Home</title>
-    <Link href="./styles/home.css" rel="stylesheet"></Link>
+    <link href="./styles/home.css" rel="stylesheet" />
   </head>
   <body>
     <div class="wrapper">
-        <div class="wrapper__header">
-            <div class="content__title">
-                <div class="title">Updated News</div>
-                <div class="subtitle">TODAY STORY</div>
-            </div>
-            <div class="divideLine"></div>
-            <div class="contents__body">오늘의 기분 너무 좋음</div>
+      <div class="wrapper__header">
+        <div class="content__title">
+          <div class="title">Updated News</div>
+          <div class="subtitle">TODAY STORY</div>
         </div>
-        <div class="wrapper__body"></div>
+        <div class="divideLine"></div>
+        <div class="contents__body">오늘의 기분 너무 좋음</div>
+      </div>
+      <div class="wrapper__body">
+        <div class="content__title">
+          <div class="title">My Video</div>
+          <div class="subtitle">introduce yourself</div>
+        </div>
+        <div class="content__body"></div>
+      </div>
     </div>
   </body>
 </html>
