클래스 이름 변경

--- a/cyworld/home.html
+++ b/cyworld/home.html
@@ -19,7 +19,7 @@
           <div class="title">My Video</div>
           <div class="subtitle">introduce yourself</div>
         </div>
-        <div class="content__body"></div>
+        <div class="video"></div>
       </div>
     </div>
   </body>
