--- a/cyworld/index.html
+++ b/cyworld/index.html
@@ -60,7 +60,7 @@
               <div class="right__header__setting">사생활보호설정</div>
             </div>
             <div class="wrapper__right__body">
-              <iframe src="./game.html"></iframe>
+              <iframe src="./jukebox.html"></iframe>
             </div>
           </div>
         </div>
