--- a/cyworld/index.html
+++ b/cyworld/index.html
@@ -4,6 +4,7 @@
     <title>나규태님의 미니홈피 :: 사이좋은 사람들, 싸이월드</title>
     <link rel="stylesheet" href="./styles/index.css" />
     <script src="https://kit.fontawesome.com/4eb8df6ed3.js" crossorigin="anonymous"></script>
+    <script src="./index.js"></script>
   </head>
   <body>
     <div class="background">
@@ -60,8 +61,13 @@
               <div class="right__header__setting">사생활보호설정</div>
             </div>
             <div class="wrapper__right__body">
-              <iframe src="./jukebox.html"></iframe>
+              <iframe id="contentFrame" src="./home.html"></iframe>
             </div>
+          </div>
+          <div class="navigation">
+            <div class="navigation__item" id="menuHome" onclick="menuHome()" focus="true">홈</div>
+            <div class="navigation__item" id="menuJukebox" onclick="menuJukebox()">쥬크박스</div>
+            <div class="navigation__item" id="menuGame" onclick="menuGame()">게임</div>
           </div>
         </div>
       </div>
