--- a/javascript/ToDo-list/index.html
+++ b/javascript/ToDo-list/index.html
@@ -17,5 +17,6 @@
     <div class="delete-btn-wrapper">
       <button onclick="deleteAll()">전체 삭제</button>
     </div>
+    <!-- 테스트 -->
   </body>
 </html>
